# MLTests

./: .gitmodules  README.md  references.txt
malaria/: Readme.md
malaria/Caffe2/application/: .gitignore  CMakeLists.txt  Readme.md  main.cc
malaria/Caffe2/application/Modules/: FindMKL.cmake
malaria/Caffe2/application/data/: predict_net.pb
malaria/Caffe2/modelTranslation/: .gitignore  Readme.md  convertFromKerasToCaffe2.py
malaria/OpenCV/application/: .gitignore  CMakeLists.txt  Readme.md  main.cc
malaria/OpenCV/application/data/: malaria_model.pbtxt
malaria/OpenCV/modelTranslation/: .gitignore  Readme.md  convertFromKerasToTF.py
malaria/TF/application/: BUILD  README.md  main.cc
malaria/TF/modelTranslation/: .gitignore  Readme.md  convertFromKerasToTF.py
malaria/TFLite/application/: BUILD  main.cc  png_helper.cc  png_helper.h  tf.main.cc
malaria/TFLite/modelTranslation/: Readme.md
malaria/kerasModel/: build_dataset.py  test.py
mask/Pytorch/app/: CMakeLists.txt  app.cc
mask/TF/: tiff_utils.cc
mask/TFLite/: BUILD  main.cc  tiff_utils.cc  tiff_utils.h
segmentation/: README.md  Test Segmentation FPN.ipynb
segmentation/.ipynb_checkpoints/: Test Segmentation FPN-checkpoint.ipynb
segmentation/deployment/: BUILD  README.md  main.cc  tiff_utils.cc  tiff_utils.h
segmentation/deployment/Caffe2/: Readme.md  notes
segmentation/deployment/Caffe2/app/: CMakeLists.txt  app.cc
segmentation/deployment/Caffe2/app/data/: init_net.pb
segmentation/deployment/Caffe2/caffe2Model/: Readme.md  init_net.pb  reference
segmentation/deployment/Caffe2/caffe2Program/: .gitignore  CMakeLists.txt  Makefile  Readme.md  app.cc
segmentation/deployment/Caffe2/caffe2Program/include/caffe2/operator/: diagonal_op.h
segmentation/deployment/Caffe2/caffe2Program/include/caffe2/util/: tensor.h
segmentation/deployment/Caffe2/caffe2Program/src/: pretrained.cc
segmentation/deployment/Caffe2/caffe2Program/src/caffe2/binaries/: pretrained.cc
segmentation/deployment/Caffe2/caffe2Program/src/caffe2/util/: model.cc  net_operator.cc  net_serial.cc  tensor.cc
segmentation/deployment/Caffe2/caffeModel/: Readme.md  notes  test_model.prototxt
segmentation/deployment/Caffe2/modelTranslations/caffe2Model/: test_model.onnx  test_model.pb
segmentation/deployment/Caffe2/modelTranslations/caffeModel/: Readme.md  test_model.caffemodel
segmentation/deployment/Caffe2/modelTranslations/onnx/: onnx-predict.pbtxt  test_model.onnx
segmentation/deployment/Caffe2/onnx/: Readme.md  predict_net.pb  script.py  test_model.onnx
segmentation/deployment/Pytorch/app/: .gitignore
segmentation/deployment/Pytorch/app/data/: test_model.pt
segmentation/deployment/Pytorch/modelTranslations/: Readme.md
segmentation/deployment/TF/: README.md
segmentation/deployment/TF/test/: dumpSegmentation.txt  plotPy
segmentation/deployment/TFLite/data/: Readme.md  test_model_tensorflow.pb
segmentation/deployment/test/: dumpInput.txt  dumpSegmentation.txt  plotPy
segmentation/learning/: Test Segmentation FPN.ipynb
